<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">
    
	<TextView
		android:id="@+id/popup_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:textSize="15sp"
		android:padding="@dimen/small_margin"
		android:textStyle="bold"/>

    <LinearLayout
	    android:layout_width="match_parent" 
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">

        <TextView
	        android:layout_width="0dp" 
            android:layout_height="wrap_content" 
            android:layout_weight="50" 
            android:gravity="end"
			android:textStyle="bold"
			android:paddingEnd="@dimen/default_margin"
            android:text="@string/popup_snippet_height"/> 

        <TextView
            android:id="@+id/popup_snippet_height"
            android:layout_width="0dp" 
            android:layout_height="wrap_content" 
            android:paddingStart="@dimen/default_margin"
            android:layout_weight="50"/>
    </LinearLayout>
    <LinearLayout
	    android:layout_width="match_parent" 
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"  
            android:layout_height="wrap_content" 
            android:layout_weight="50" 
            android:gravity="end"
			android:textStyle="bold"
			android:paddingEnd="@dimen/default_margin"
            android:text="@string/popup_snippet_trunk"/> 

        <TextView
            android:id="@+id/popup_snippet_trunk"
            android:layout_width="0dp" 
            android:layout_height="wrap_content" 
            android:paddingStart="@dimen/default_margin"
            android:layout_weight="50"/>
    </LinearLayout>
    <LinearLayout
	    android:layout_width="match_parent" 
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">

        <TextView
            android:layout_width="0dp" 
            android:layout_height="wrap_content" 
            android:layout_weight="50" 
            android:gravity="end"
			android:textStyle="bold"
			android:paddingEnd="@dimen/default_margin"
            android:text="@string/popup_snippet_crown"/> 

        <TextView
            android:id="@+id/popup_snippet_crown"
            android:layout_width="0dp"   
            android:layout_height="wrap_content" 
            android:paddingStart="@dimen/default_margin"
            android:layout_weight="50"/>
    </LinearLayout>
    <LinearLayout
	    android:layout_width="match_parent" 
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"  
            android:layout_height="wrap_content" 
            android:layout_weight="50" 
            android:gravity="end"
			android:textStyle="bold"
			android:paddingEnd="@dimen/default_margin"
            android:text="@string/popup_snippet_genre"/> 

        <TextView
            android:id="@+id/popup_snippet_genre"
            android:layout_width="0dp" 
            android:layout_height="wrap_content" 
            android:paddingStart="@dimen/default_margin"
            android:layout_weight="50"/>
    </LinearLayout>
    <LinearLayout
	    android:layout_width="match_parent" 
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"  
            android:layout_height="wrap_content" 
            android:layout_weight="50" 
            android:gravity="end"
			android:textStyle="bold"
			android:paddingEnd="@dimen/default_margin"
            android:text="@string/popup_snippet_species"/> 

        <TextView
            android:id="@+id/popup_snippet_species"
            android:layout_width="0dp"  
            android:layout_height="wrap_content" 
            android:paddingStart="@dimen/default_margin"
            android:layout_weight="50"/>
    </LinearLayout>
    <LinearLayout
	    android:layout_width="match_parent" 
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">

        <TextView
            android:layout_width="0dp" 
            android:layout_height="wrap_content" 
            android:layout_weight="50" 
            android:gravity="end"
			android:textStyle="bold"
			android:paddingEnd="@dimen/default_margin"
            android:text="@string/popup_snippet_type"/> 

        <TextView
            android:id="@+id/popup_snippet_type"
            android:layout_width="0dp"  
            android:layout_height="wrap_content" 
            android:paddingStart="@dimen/default_margin"
            android:layout_weight="50"/>
    </LinearLayout>
    
    <EditText
	    android:id="@+id/check_tree_edit"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/check_tree_hint"
	    android:inputType="number" />
    
    <LinearLayout
	    android:layout_width="match_parent" 
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:padding="@dimen/small_margin"
	    android:orientation="horizontal">

        <fr.apln.view.element.CircleButton  
		    android:id="@+id/info_tree_nok"
			android:layout_width="@dimen/circle_button_size"
	        android:layout_height="@dimen/circle_button_size"
	        android:src="@drawable/ic_action_cancel_white"
	        app:cb_color="@color/green"
	        app:cb_pressedRingWidth="@dimen/circle_button_ring"/>
        
        <fr.apln.view.element.CircleButton  
		    android:id="@+id/info_tree_ok"
			android:layout_width="@dimen/circle_button_size"
	        android:layout_height="@dimen/circle_button_size"
	        android:src="@drawable/ic_action_tick_white"
	        app:cb_color="@color/green"
	        app:cb_pressedRingWidth="@dimen/circle_button_ring"/>
		
    </LinearLayout>
    
    
</LinearLayout>